--- a/OpenGL30Pyramid/app/src/main/res/values/styles.xml
+++ b/OpenGL30Pyramid/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base Application theme. -->
-    <style name="AppTheme" parent="android:Theme.Light.NoTitleBar.Fullscreen">
+    <style name="AppTheme" parent="android:Theme.NoTitleBar.Fullscreen">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
