updated to api 35 and android 15 layout.

--- a/HelloOpenGLES20/app/src/main/res/menu/open_gles20.xml
+++ b/HelloOpenGLES20/app/src/main/res/menu/open_gles20.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.android.opengl.OpenGLES20Activity" >
+    tools:context="com.example.android.opengl.MainActivity" >
 
     <item
         android:id="@+id/action_settings"
